[package]
name = "az-mock-proxy"
version = "0.1.0"
authors = ["keith <khowling@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.12"
bytes = "1.0.1"
serde_json = "1.0"
regex = "1"